# claude-agent-team

./: .gitignore  .ralph-continue.txt  .ralph-response.txt  .ralph-status.md  ARCHITECTURE-UPDATE.md  CLAUDE.md  END-TO-END-TEST-SUMMARY.md  FINAL-DELIVERY.md  HANDOFF-TO-USER.md  ITERATION-1-SUMMARY.md  ITERATION-10-PERFORMANCE.md  ITERATION-14-INTEGRATION.md  ITERATION-7-SUMMARY.md  ITERATIONS-3-7-COMPLETE.md  ITERATIONS-8-13-SUMMARY.md  NEW-FEATURES.md  QUICK-START-GUIDE.md  RALPH-HANDOFF-NOTES.md  RALPH-ITERATION-1.md  RALPH-LOOP-PROGRESS.md  README.md  USER-CHECKLIST.md  VISUAL-DEMO.md  demo_tmux.py  demo_tmux_ui.py  pyproject.toml  test_agent_teams.py
cat/: __init__.py  __main__.py  cli.py
cat/agent/: __init__.py  claude_monitor.py  controller.py  models.py  registry.py  tmux.py
cat/dashboard/: __init__.py  agent_panel.py  app.py  chat_panel.py  kanban.py  stats_panel.py  task_card.py  tmux_manager.py  unified_manager.py
docs/: best-practices.md  examples.md  faq.md  model-selection.md  tmux-ui-guide.md  troubleshooting.md  unified-manager-guide.md  visual-guide.md
roles/: _template.md  architect.md  devils-advocate.md  implementer.md  investigator.md  manager.md  performance-analyst.md  product-manager.md  researcher.md  reviewer.md  security-reviewer.md  synthesizer.md  test-coverage-checker.md  tester.md  worker.md
settings/: settings.json
tests/: README.md  __init__.py  conftest.py  test_agent_controller.py  test_claude_monitor.py  test_cli.py  test_dashboard.py  test_end_to_end.py  test_tmux_integration.py  test_workflow_integration.py
(+27 files in other folders)
